# ChangeLog for dev-lang/mono
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/mono/ChangeLog,v 1.163 2009/04/17 01:29:22 loki_val Exp $

  17 Apr 2009; Peter Alfredsen <loki_val@gentoo.org> mono-2.0.1-r1.ebuild,
  mono-2.2-r5.ebuild, mono-2.4.ebuild:
  Check for CONFIG_SYSVIPC, see bug 261869. Thanks to Sergey Zolotorev
  <sergey.zolotorev@gmail.com> for finding the cause.

  10 Apr 2009; Peter Alfredsen <loki_val@gentoo.org>
  +files/mono-2.4-ppcbuild-fix.patch, mono-2.4.ebuild:
  Add fix for build on ppc/ppc64 from upstream CVS

  06 Apr 2009; Brent Baude <ranger@gentoo.org> mono-2.2-r5.ebuild:
  Marking mono-2.2-r5 ~ppc for bug 255410

*mono-2.2-r5 (04 Apr 2009)

  04 Apr 2009; Peter Alfredsen <loki_val@gentoo.org> -mono-2.2-r4.ebuild,
  +mono-2.2-r5.ebuild, mono-2.4.ebuild:
  Fix bug 264566, nunit-console2 not using the 2.0 runtime. Thanks to Mike
  Mazur <mmazur@gmail.com> for reporting.

  04 Apr 2009; Markus Meier <maekke@gentoo.org> mono-2.0.1-r1.ebuild:
  amd64/x86 stable, bug #234305

*mono-2.4 (30 Mar 2009)

  30 Mar 2009; Peter Alfredsen <loki_val@gentoo.org> +mono-2.4.ebuild:
  Bump to mono-2.4 version.

  28 Mar 2009; Peter Alfredsen <loki_val@gentoo.org>
  +files/mono-2.2-freebsd-elf_common.patch, mono-2.2-r4.ebuild:
  Fix bug 258722, mono fails to build on solaris. Fix bug 262429, dodoc not
  finding target files.

  27 Mar 2009; Brent Baude <ranger@gentoo.org> mono-2.0.1-r1.ebuild:
  Marking mono-2.0.1-r1 ppc stable for bug 234305

*mono-2.2-r4 (22 Mar 2009)

  22 Mar 2009; Peter Alfredsen <loki_val@gentoo.org> -mono-2.2-r3.ebuild,
  +mono-2.2-r4.ebuild:
  Fix bug 256264, mono-debugger-2.2 doesn't work. It seems mono-debugger
  uses some symbols that are only available if mono is compiled statically.
  Do --enable-static so we can debug our progams finally. Thanks to Jan
  Oravec <jan.oravec@6com.sk> for the fix and ikelos for the report.
