@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/mono
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/mono/ChangeLog,v 1.163 2009/04/17 01:29:22 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/mono/ChangeLog,v 1.164 2009/04/20 05:01:45 loki_val Exp $
+
+  20 Apr 2009; Peter Alfredsen <loki_val@gentoo.org> mono-2.0.1-r1,
+  mono-2.2-r5, mono-2.4:
+  Do not require kernel sources, warn if sources not found.
 
   17 Apr 2009; Peter Alfredsen <loki_val@gentoo.org> mono-2.0.1-r1.ebuild,
   mono-2.2-r5.ebuild, mono-2.4.ebuild:
